fixed the layout issue
inline-table make the boards act like in a table
inline-block can flex the boards around

--- a/static/style.css
+++ b/static/style.css
@@ -261,7 +261,7 @@ div.horizontalScroll div.board {
     width: 300px;
     height: 800px;
     border: solid 1px #000;
-    display: inline-block;
+    display: inline-table;
 }
 
 div.board div.board-header {
